--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,58 @@
 version: '3'
 services:
   app:
-    build: .
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    # Dockerfileのディレクトリ(context)指定し、コンテナ作成
+    build:
+      context: .
+    # 設定ファイル指定し、puma(App Server)立ち上げ
+    command: bundle exec puma -C config/puma.rb
+
+    # host側のdocker-compose.ymlが存在しているディレクトリと、コンテナ側の/workouterをマウント（共通化）
     volumes:
-# 「app」と書かれている部分はディレクトリ名に応じて変更します。
       - .:/workouter
-    ports:
-      - 3000:3000
+      - public-data:/workouter/public
+      - tmp-data:/workouter/tmp
+      - log-data:/workouter/log
+    # dbコンテナと共通のネットワーク利用
+    networks:
+      - workouter-network
+    # dbコンテナが生成されてから、appを実行
     depends_on:
       - db
-    tty: true
-    stdin_open: true
+
   db:
-    platform: linux/x86_64
+    # dockerhubからmysqlをプル
     image: mysql:5.7
-    volumes:
-      - db-volume:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: password
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+      MYSQL_DATABASE: workouter_development
+    volumes:
+      - db-data:/var/lib/mysql
+    networks:
+      - workouter-network
+
+  web:
+    # ./nrinx_dockerがあるディレクトリ指定し、コンテナ作成
+    build:
+      context: ./nginx_docker
+    volumes:
+      - public-data:/workouter/public
+      - tmp-data:/workouter/tmp
+    ports:
+      - 80:80
+    depends_on:
+      - app
+    networks:
+      - workouter-network
+
 volumes:
-  db-volume:
+  public-data:
+  tmp-data:
+  log-data:
+  db-data:
+
+networks:
+  workouter-network:
+    external: true
