--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -5,8 +5,8 @@ upstream workouter {
 server {
   listen 80;
 # =========ローカルと本番切り替え===========
-  # server_name ◯◯◯.◯◯◯.◯◯◯.◯◯◯;
-  server_name localhost;
+  server_name 34.208.243.129;
+  # server_name localhost;
 # ======================================
 
   access_log /var/log/nginx/access.log;
