--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
     networks:
       - workouter-network
     # dbコンテナが生成されてから、appを実行
-    depends_on:
-      - db
+    # depends_on:
+    #   - db
 
   # db:
   #   # dockerhubからmysqlをプル
